--- a/src/components/body/pages/compnents/BluePanel.scss
+++ b/src/components/body/pages/compnents/BluePanel.scss
@@ -8,7 +8,7 @@
   padding: 20px;
   font-size: 1em;
   line-height: 150%;
-  background: linear-gradient(-45deg, rgb(0, 32, 48), rgba(0, 92, 138, 0.9) 40%, rgba(0, 88, 133, 0.85) 65%, rgba(0, 32, 48, 0.95));
+  background: linear-gradient(-45deg, rgb(0, 32, 48), rgba(0, 92, 138, 0.95) 40%, rgba(0, 88, 133, 0.95) 65%, rgba(0, 32, 48, 0.95));
   border: 4px solid rgb(0, 31, 84);
   border-radius: 5px;
   text-shadow:
@@ -30,4 +30,8 @@
     inset 0 0 2px 1px rgb(39, 186, 233),
     0 0 3px 0 rgb(39, 186, 233);
   pointer-events: none;
+}
+
+.bluePanelExper {
+  min-height: 50px !important;
 }
