--- a/src/components/body/pages/compnents/BluePanel.scss
+++ b/src/components/body/pages/compnents/BluePanel.scss
@@ -2,7 +2,7 @@
   color: white;
   width: 100%;
   min-width: 260px;
-  margin: auto;
+  margin: 0 auto;
   //   margin-right: auto;
   position: relative;
   padding: 20px;
