--- a/src/components/body/background/background.scss
+++ b/src/components/body/background/background.scss
@@ -28,8 +28,8 @@
 
 #city {
   display: block;
-  min-height: 660px;
-  min-width: 1497px;
+  //   min-height: 660px;
+  //   min-width: 1497px;
   max-height: 786px;
   //   width: 110%;
   filter: brightness(1.25) contrast(1.1);
