--- a/src/App.scss
+++ b/src/App.scss
@@ -22,10 +22,11 @@ body {
 #pageContainer {
   z-index: 2;
   position: absolute;
-  height: calc(100vh - 96px);
+  height: calc(100vh);
   width: 100vw;
   overflow-y: auto;
   max-width: 1782px;
+  padding-top: 80px;
 }
 
 footer {
@@ -35,7 +36,7 @@ footer {
 
 footer span {
   color: #ffffff;
-  font-size: 11px;
+  font-size: 12px;
   cursor: pointer;
   z-index: 3;
   position: relative;
