--- a/src/components/body/pages/Pages.scss
+++ b/src/components/body/pages/Pages.scss
@@ -4,7 +4,7 @@
 }
 
 .pages {
-  min-height: calc(100vh - 120.25px);
+  min-height: calc(87.6vh);
 }
 
 #sectionTitle {
@@ -17,6 +17,8 @@
     font-weight: bold;
     color: #ffaf19;
     font-size: 1.25em;
+    background-color: #00000078;
+    padding: 1px 2px;
   }
 }
 
@@ -35,6 +37,36 @@
 
 #experience {
   width: 100%;
+}
+
+.homeTextStyle {
+  flex-wrap: wrap;
+  margin-top: 21px;
+  display: flex;
+  justify-content: space-around;
+
+  .titleStyle {
+    margin: 8px 0;
+    transition: opacity 3s;
+    font-size: 1.9em;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    display: flex;
+    gap: 10px;
+    flex-grow: 1;
+    justify-content: center;
+    padding: 0 10px;
+    flex-wrap: wrap;
+
+    .titleText {
+      color: #ffffff;
+      background-color: #000000c7;
+    }
+
+    .boldText {
+      color: #ffaf19;
+      font-weight: bold;
+    }
+  }
 }
 
 @media screen and (max-width: 610px) {
