--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -11,19 +11,25 @@ $hover-orange: #ffaf19;
   background-size: 100%;
 }
 
+#headerCanvas {
+  border-bottom-color: rgb(39, 186, 233);
+  border-bottom-style: solid;
+  border-bottom-width: 2px;
+}
+
 .header {
-  height: 96px;
+  height: 75px;
   padding: 0;
-  position: sticky;
+  position: absolute;
   display: flex;
   flex-wrap: nowrap;
   text-align: center;
   top: 0;
   z-index: 3;
-  background-color: #002940;
-  border-bottom-color: rgb(39, 186, 233);
-  border-bottom-style: solid;
-  border-bottom-width: 2px;
+  //   background-color: #002940;
+  //   border-bottom-color: rgb(39, 186, 233);
+  //   border-bottom-style: solid;
+  //   border-bottom-width: 2px;
   margin: 0px;
   width: 100%;
 
@@ -48,7 +54,7 @@ $hover-orange: #ffaf19;
 
     #dropDownMenu {
       padding-right: 20px;
-      margin-top: 20px;
+      //   margin-top: 20px;
 
       #menuBars {
         // color: #30cee9;
@@ -62,7 +68,7 @@ $hover-orange: #ffaf19;
         cursor: pointer;
         z-index: 10;
         top: 53px;
-        font-size: 1.5em;
+        font-size: 1.75em;
       }
 
       #menuBars:hover {
@@ -76,7 +82,7 @@ $hover-orange: #ffaf19;
       #dropDownContainer {
         position: absolute;
         right: 0px;
-        top: 97px;
+        // top: 50px;
         width: 200px;
         overflow: hidden;
         transition: height 200ms linear;
@@ -88,10 +94,11 @@ $hover-orange: #ffaf19;
           text-align: right;
           right: 25px;
           z-index: 10;
-          background: linear-gradient(-45deg, rgba(0, 0, 0, 0.97), rgba(0, 92, 138, 0.95), rgba(0, 0, 0, 0.97));
+          background: linear-gradient(-45deg, rgb(0, 32, 48), rgba(0, 92, 138, 0.95) 40%, rgba(0, 88, 133, 0.95) 65%, rgba(0, 32, 48, 0.95));
+          //   border: 1px solid rgb(39, 186, 233);
+          //   border-top: hidden;
           border: 1px solid rgb(39, 186, 233);
-          border-top: hidden;
-          border-radius: 4px;
+          border-radius: 5px;
           min-height: 178px;
           transition: top 750ms ease-in;
           width: 155px;
@@ -99,7 +106,7 @@ $hover-orange: #ffaf19;
           box-shadow: 0px 4px 8px #000000;
 
           .linkContainer {
-            margin: 16px 0;
+            // margin: 16px 0;
 
             .menuBarNavigation {
               font-size: 1em;
@@ -108,6 +115,7 @@ $hover-orange: #ffaf19;
               color: #ffffff;
               letter-spacing: 2px;
               cursor: pointer;
+              font-weight: bold;
               //   text-shadow: 2px 2px 2px #000000;
               line-height: 150%;
             }
@@ -116,7 +124,7 @@ $hover-orange: #ffaf19;
               color: $hover-orange;
               //   font-size: 1.1em;
               //   letter-spacing: 3px;
-              font-weight: bold;
+              //   font-weight: bold;
             }
 
             .menuBarNavigationActive {
@@ -178,7 +186,7 @@ $hover-orange: #ffaf19;
   font-size: 1em;
   font-weight: bold;
   letter-spacing: 2px;
-  line-height: 130px;
+  line-height: 96px;
   transition: line-height 200ms linear;
   padding: 0 4px;
   text-decoration: none;
@@ -192,6 +200,7 @@ $hover-orange: #ffaf19;
 }
 
 .navLinkActive {
+  @extend .navLink;
   color: $hover-orange !important;
   text-shadow: 0 1px 5px #000000;
 }
