--- a/src/components/body/body.scss
+++ b/src/components/body/body.scss
@@ -31,3 +31,9 @@
   font-weight: 700;
   margin-bottom: 16px;
 }
+
+.sectionHeader-Line {
+  @extend .sectionHeader;
+  border-bottom: 1px solid #ffffff;
+  box-shadow: 0px 8px 11px -8px #000000;
+}
