--- a/src/components/body/pages/Pages.scss
+++ b/src/components/body/pages/Pages.scss
@@ -17,8 +17,9 @@
     font-weight: bold;
     color: #ffaf19;
     font-size: 1.25em;
-    background-color: #00000078;
+    background-color: #0000004a;
     padding: 1px 2px;
+    box-shadow: 0px 0px 10px 6px #0000004a;
   }
 }
 
@@ -117,6 +118,7 @@
 ::-webkit-scrollbar-thumb {
   background-color: rgb(39, 186, 233);
   border-radius: 10px;
+  border: 1px solid #000000;
 }
 
 ::-webkit-scrollbar-track {
