--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -15,6 +15,7 @@ $hover-orange: #ffaf19;
   border-bottom-color: rgb(39, 186, 233);
   border-bottom-style: solid;
   border-bottom-width: 2px;
+  transition: height 250ms;
 }
 
 .header {
@@ -26,17 +27,15 @@ $hover-orange: #ffaf19;
   text-align: center;
   top: 0;
   z-index: 3;
-  //   background-color: #002940;
-  //   border-bottom-color: rgb(39, 186, 233);
-  //   border-bottom-style: solid;
-  //   border-bottom-width: 2px;
   margin: 0px;
   width: 100%;
+  transition: height 250ms;
 
   .headerNavigation {
     z-index: 1;
     width: 100%;
     display: flex;
+    transition: height 250ms;
 
     .headerButtonsRow {
       display: flex;
@@ -57,11 +56,7 @@ $hover-orange: #ffaf19;
       //   margin-top: 20px;
 
       #menuBars {
-        // color: #30cee9;
-        // font-size: 0.75em;
-        // width: 40px;
         display: flex;
-        // position: relative;
         float: right;
         transition: all 200ms linear;
         justify-content: center;
@@ -82,7 +77,6 @@ $hover-orange: #ffaf19;
       #dropDownContainer {
         position: absolute;
         right: 0px;
-        // top: 50px;
         width: 200px;
         overflow: hidden;
         transition: height 200ms linear;
@@ -95,8 +89,6 @@ $hover-orange: #ffaf19;
           right: 25px;
           z-index: 10;
           background: linear-gradient(-45deg, rgb(0, 32, 48), rgba(0, 92, 138, 0.95) 40%, rgba(0, 88, 133, 0.95) 65%, rgba(0, 32, 48, 0.95));
-          //   border: 1px solid rgb(39, 186, 233);
-          //   border-top: hidden;
           border: 1px solid rgb(39, 186, 233);
           border-radius: 5px;
           min-height: 178px;
@@ -106,8 +98,6 @@ $hover-orange: #ffaf19;
           box-shadow: 0px 4px 8px #000000;
 
           .linkContainer {
-            // margin: 16px 0;
-
             .menuBarNavigation {
               font-size: 1em;
               text-decoration: none;
@@ -116,15 +106,11 @@ $hover-orange: #ffaf19;
               letter-spacing: 2px;
               cursor: pointer;
               font-weight: bold;
-              //   text-shadow: 2px 2px 2px #000000;
               line-height: 150%;
             }
 
             .menuBarNavigation:hover {
               color: $hover-orange;
-              //   font-size: 1.1em;
-              //   letter-spacing: 3px;
-              //   font-weight: bold;
             }
 
             .menuBarNavigationActive {
