--- a/src/components/body/pages/Pages.scss
+++ b/src/components/body/pages/Pages.scss
@@ -7,6 +7,7 @@
   width: 100%;
   border-bottom: 1px solid #ffffff;
   padding-left: 15px;
+  padding-top: 15px;
 
   .sectionText {
     text-shadow: 2px 2px 5px #000000;
