--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -15,6 +15,15 @@ $hover-orange: #ffaf19;
   background-size: 100%;
 }
 
+.logoNameContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
+  height: 50px;
+}
+
 #headerCanvas {
   border-bottom-color: rgb(39, 186, 233);
   border-bottom-style: solid;
