--- a/src/components/body/pages/Pages.scss
+++ b/src/components/body/pages/Pages.scss
@@ -1,5 +1,3 @@
-@import '../../body/body.scss';
-
 .panels {
   width: 45% !important;
   margin-top: 0px !important;
@@ -37,20 +35,25 @@
 
 #resume {
   .expRow {
-    @extend .hbRow;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    flex-wrap: wrap;
     flex-wrap: nowrap;
   }
   .expColumn {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    width: 49%;
+    // width: 49%;
   }
 
   .clients {
-    border: 1px solid rgb(39, 186, 233);
+    border: 1px solid rgb(255 255 255 / 34%);
     border-radius: 5px;
     padding: 10px;
+    margin-top: 20px;
+    background-color: #00000030;
 
     .nameDescription {
       flex-wrap: nowrap;
@@ -65,7 +68,7 @@
 
 #homePage {
   height: calc(100vh - 102px);
-  padding-top: calc((100vh - 850px) / 2);
+  padding-top: calc((100vh - 950px) / 2);
 }
 
 .homeTextStyle {
@@ -96,6 +99,25 @@
       font-weight: bold;
       font-size: 1.5em;
       align-self: flex-end;
+    }
+  }
+
+  .aboutStyle {
+    transition: opacity 3s;
+    display: flex;
+    gap: 10px;
+    flex-grow: 1;
+    justify-content: center;
+    flex-wrap: wrap;
+    .aboutContainer {
+      border: 1px solid #ffffff70;
+      padding: 20px;
+      border-radius: 5px;
+      font-size: 1.25em;
+      font-family: Verdana, Geneva, Tahoma, sans-serif;
+      margin: 40px;
+      background-color: #000000c7;
+      //   width: 50%;
     }
   }
 }
