--- a/src/components/body/pages/Pages.scss
+++ b/src/components/body/pages/Pages.scss
@@ -25,7 +25,7 @@
 
 .dataRows {
   display: flex;
-  gap: 15px;
+  gap: 20px;
   flex-direction: row;
 }
 
@@ -53,7 +53,7 @@
     border-radius: 5px;
     padding: 10px;
     margin-top: 20px;
-    background-color: #00000030;
+    background-color: rgb(0 0 0 / 25%);
 
     .nameDescription {
       flex-wrap: nowrap;
