--- a/src/components/body/pages/portfolio/Portfolio.scss
+++ b/src/components/body/pages/portfolio/Portfolio.scss
@@ -183,7 +183,7 @@
       display: flex;
       flex-direction: row;
       gap: 10px;
-      overflow: scroll;
+      overflow: auto;
       .snapshot {
         width: 200px;
         cursor: pointer;
