--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -43,6 +43,34 @@ $hover-orange: #ffaf19;
   transition: height 150ms ease-in;
 }
 
+// const minStyle = {
+//   height: '50px',
+//   maxWidth: '1786px',
+//   lineHeight: '50px',
+//   position: 'relative',
+// }
+
+// const normStyle = {
+//   maxWidth: '1786px',
+//   height: '96px',
+//   lineHeight: '50px',
+//   position: 'relative',
+// }
+
+.minStyle {
+  height: 50px;
+  max-width: 1786px;
+  line-height: 50px;
+  position: relative;
+}
+
+.normStyle {
+  max-width: 1786px;
+  height: 96px;
+  line-height: 50px;
+  position: relative;
+}
+
 .header {
   height: 75px;
   padding: 0;
